# jellystatic-markets

./: README.md
options-pricing-v0/: README.md  pyproject.toml
options-pricing-v0/src/volsurface/: __init__.py
options-pricing-v0/src/volsurface.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
options-pricing-v0/src/volsurface/data/: __init__.py  chain_cleaning.py
options-pricing-v0/src/volsurface/examples/: run_pipeline.py
options-pricing-v0/src/volsurface/iv/: __init__.py  implied_vol.py
options-pricing-v0/src/volsurface/pricing/: __init__.py  binomial.py  black_scholes.py  monte_carlo.py
options-pricing-v0/src/volsurface/surface/: __init__.py  svi.py
options-pricing-v0/src/volsurface/utils/: synthetic_data.py
options-pricing-v0/tests/: test_iv_data_surface.py  test_pricing.py
quantdesk-v0/: README.md  config.yaml  pyproject.toml
quantdesk-v0/src/quantdesk/: __init__.py  __main__.py  config.py
quantdesk-v0/src/quantdesk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quantdesk-v0/src/quantdesk/data/: __init__.py  events.py  loader.py  synthetic.py
quantdesk-v0/src/quantdesk/engine/: __init__.py  portfolio.py
quantdesk-v0/src/quantdesk/report/: __init__.py  builder.py
quantdesk-v0/tests/: test_config.py  test_data.py  test_engine.py  test_report.py
volatility-forecast-v0/: README.md  pyproject.toml
volatility-forecast-v0/src/volforecast/: __init__.py
volatility-forecast-v0/src/volforecast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
volatility-forecast-v0/src/volforecast/evaluation/: __init__.py  losses.py  walkforward.py
volatility-forecast-v0/src/volforecast/examples/: run_pipeline.py
volatility-forecast-v0/src/volforecast/models/: __init__.py  benchmarks.py  garch.py
volatility-forecast-v0/src/volforecast/regime/: regime.py  (+1 more)
volatility-forecast-v0/tests/: test_volforecast.py
(+22 files in other folders)
