[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "volforecast"
version = "0.1.0"
description = "Volatility forecasting engine: GARCH/EGARCH, robust evaluation, vol targeting (APAC focus)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "scipy>=1.10", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7", "arch>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
